fixed footer spacing problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
 * {
 	font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
+
+ body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  }
